<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".activities.RegistrationActivity">

    <com.google.android.material.floatingactionbutton.FloatingActionButton
        android:id="@+id/floatingActionButton"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:backgroundTint="#BDD4F1"
        android:clickable="true"
        android:contentDescription="@string/back_button"
        app:backgroundTintMode="src_in"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.045"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="0.023"
        app:srcCompat="?attr/actionModeCloseDrawable" />

    <TextView
        android:id="@+id/textView2"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:fontFamily="sans-serif-black"
        android:text="@string/register"
        android:textAppearance="@style/TextAppearance.AppCompat.Medium"
        android:textSize="24sp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.354"
        app:layout_constraintStart_toEndOf="@+id/floatingActionButton"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="0.041" />

    <EditText
        android:id="@+id/regFullName"
        android:layout_width="267dp"
        android:layout_height="53dp"
        android:layout_marginBottom="54dp"
        android:autofillHints="name"
        android:ems="10"
        android:hint="@string/full_name"
        android:inputType="textPersonName"
        android:textColorHighlight="#9F9F9F"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="0.115" />

    <EditText
        android:id="@+id/regEmail"
        android:layout_width="267dp"
        android:layout_height="53dp"
        android:layout_marginBottom="54dp"
        android:autofillHints="emailAddress"
        android:ems="10"
        android:hint="@string/regEmail"
        android:inputType="textEmailAddress"
        android:textColorHighlight="#9F9F9F"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="0.225" />

    <TextView
        android:id="@+id/textView5"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:fontFamily="sans-serif-black"
        android:text="@string/verify_your_account"
        android:textAppearance="@style/TextAppearance.AppCompat.Medium"
        android:textSize="24sp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="0.499" />

    <ImageView
        android:id="@+id/imageView2"
        android:layout_width="157dp"
        android:layout_height="196dp"
        android:layout_marginTop="552dp"
        android:layout_marginEnd="336dp"
        android:contentDescription="@string/cartoon_worm"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="1.0"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:srcCompat="@drawable/img_1020" />

    <EditText
        android:id="@+id/regCardNumber"
        android:layout_width="267dp"
        android:layout_height="53dp"
        android:layout_marginBottom="54dp"
        android:autofillHints="creditCardNumber"
        android:ems="10"
        android:hint="@string/card_number"
        android:inputType="number"
        android:textColorHighlight="#9F9F9F"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="0.639" />

    <EditText
        android:id="@+id/regSecurity"
        android:layout_width="267dp"
        android:layout_height="53dp"
        android:layout_marginBottom="54dp"
        android:autofillHints="creditCardSecurityCode"
        android:ems="10"
        android:hint="@string/security"
        android:inputType="number"
        android:textColorHighlight="#9F9F9F"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="0.748" />

    <EditText
        android:id="@+id/regExpiry"
        android:layout_width="267dp"
        android:layout_height="53dp"
        android:layout_marginBottom="54dp"
        android:autofillHints="creditCardExpirationDate"
        android:ems="10"
        android:hint="@string/expiry"
        android:inputType="number"
        android:textColorHighlight="#9F9F9F"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="0.855" />

    <EditText
        android:id="@+id/regPassword"
        android:layout_width="267dp"
        android:layout_height="53dp"
        android:layout_marginBottom="54dp"
        android:autofillHints="password"
        android:ems="10"
        android:hint="@string/regPassword"
        android:inputType="textPassword"
        android:textColorHighlight="#9F9F9F"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="0.334" />

    <EditText
        android:id="@+id/regPhoneNumber"
        android:layout_width="267dp"
        android:layout_height="53dp"
        android:autofillHints="Phone Number"
        android:ems="10"
        android:hint="@string/phone_number"
        android:inputType="phone"
        android:textColorHighlight="#9F9F9F"
        app:layout_constraintBottom_toTopOf="@+id/textView5"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="0.929" />

    <Button
        android:id="@+id/register"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:backgroundTint="#BAA287"
        android:text="@string/registerButton"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="@+id/regExpiry"
        app:layout_constraintHorizontal_bias="0.441"
        app:layout_constraintStart_toEndOf="@+id/imageView2"
        app:layout_constraintTop_toBottomOf="@+id/regExpiry"
        app:layout_constraintVertical_bias="0.208" />

    <TextView
        android:id="@+id/registerStatusLabel"
        android:layout_width="185dp"
        android:layout_height="40dp"
        android:textAlignment="center"
        android:textColor="@android:color/holo_red_light"
        android:textStyle="bold"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/register"
        app:layout_constraintVertical_bias="0.305" />

</androidx.constraintlayout.widget.ConstraintLayout>