<resources>
    <string name="app_name">csci3130-g2-quick-cash</string>
    <string name="workworm">WorkWorm</string>
    <string name="already_have_an_account">Already have an Account?</string>
    <string name="login">LOGIN</string>
    <string name="i_m_a_new_user">I\'M A NEW USER</string>
    <string name="what_workworm_is_for">Looking for quick cash? Looking to give away your chores? That\'s what WorkWorm is for!</string>
    <string name="csci3130_g2">CSCI3130-G2</string>
    <string name="cartoon_worm">Cartoon Worm</string>
    <string name="email">Email</string>
    <string name="password">Password</string>
    <string name="back_button">Back Button</string>
    <string name="register">Register</string>
    <string name="full_name">Full Name*</string>
    <string name="regEmail">Email*</string>
    <string name="regPassword">Password*</string>
    <string name="verify_your_account">Verify your Account</string>
...
    <string name="INVALID_EMPLOYEE">This email isn\'t linked to any known Worm.</string>
    <string name="EMPTY_STRING"></string>
    <string name="Profile">Profile</string>
    <string name="INVALID_HOURLY">Hourly wage should be greater than 0.</string>
    <string name="INVALID_HOURS">Hours worked should be greater than 0.</string>
    <string name="don_t_worry_you_can_always_come_back_and_change_this_later">Don\'t worry, you can always come back and change this later.</string>
    <string name="INVALID_EMAIL">Invalid Email.</string>
    <string name="INVALID_PASSWORD">Invalid Password.</string>
    <string name="INVALID_CREDENTIALS">Incorrect Email or Password.</string>
    <string name="INVALID_FULL_NAME">Invalid Name.</string>
    <string name="INVALID_CONTACT">Invalid Contact.</string>
    <string name="job_title">Job Title</string>
    <string name="submit">Submit</string>
    <string name="urgent">Urgent</string>
    <string name="date_dd_mm_yyyy">Date (DD/MM/YYYY)</string>
    <string name="expected_duration_hours">Expected Duration (Hours)</string>
    <string name="place_city_postal_code">Place (City, Postal Code)</string>
...
    <string name="verified_worm_for_hire">Verified Worm-for-Hire ✓</string>
    <string name="today_near_you">Today Near You</string>
    <string name="refresh">refresh</string>
    <string name="menu_icon">menu icon</string>
    <string name="close">Close ⏎</string>
    <string name="predefined_jobs">Predefined Jobs</string>
    <string name="walk_my_dog">Walk my Dog</string>
    <string name="fix_my_computer">Fix my Computer</string>
    <string name="mow_my_lawn">Mow my Lawn</string>
    <string name="pickup_my_groceries">Pickup my Groceries</string>
    <string name="babysitting">Babysitting</string>
    <string name="dropoff_to_airport">Dropoff to Airport</string>
    <string name="pickup_from_airport">Pickup from Airport</string>
    <string name="start_from_scratch">Start From Scratch</string>
    <string name="upside_down_worm">upside down worm</string>
    <string name="search2">SEARCH</string>
    <string name="filter">Filter</string>
    <string name="verify_worm">Verify Worm</string>
    <string name="makepayment2">MAKE PAYMENT</string>
...
