...
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent">

    <TextView
        android:id="@+id/jobdetails"
        android:layout_width="199dp"
        android:layout_height="59dp"
        android:layout_marginEnd="100dp"
        android:fontFamily="sans-serif-black"
        android:paddingTop="10dp"
        android:text="@string/job_details"
...
        android:ems="10"
        android:gravity="start|top"
        android:hint="@string/job_description"
        android:inputType="textMultiLine"
        android:textAlignment="viewStart"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="@+id/jobTitle"
        app:layout_constraintHorizontal_bias="0.0"
        app:layout_constraintStart_toStartOf="@+id/jobTitle"
        app:layout_constraintTop_toBottomOf="@+id/jobTitle"
        app:layout_constraintVertical_bias="0.016" />

    <EditText
...
