...
        android:contentDescription="@string/cartoon_worm"
        app:layout_constraintBottom_toTopOf="@+id/email"
        app:layout_constraintStart_toEndOf="@+id/textView3"
        app:srcCompat="@drawable/cartoon_worm_7" />

    <Button
        android:id="@+id/newUser"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:backgroundTint="#BAA287"
        android:text="@string/i_m_a_new_user"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="@+id/email"
...
        app:layout_constraintEnd_toEndOf="@+id/email"
        app:layout_constraintStart_toStartOf="@+id/email"
        app:layout_constraintTop_toBottomOf="@+id/email"
        app:layout_constraintVertical_bias="0.078" />

    <TextView
        android:id="@+id/mainStatusLabel"
        android:layout_width="177dp"
        android:layout_height="33dp"
        android:textAlignment="center"
        android:textColor="@android:color/holo_red_light"
        android:textStyle="bold"
        app:layout_constraintBottom_toBottomOf="parent"
...
